--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@monaco-editor/react": "^4.6.0",
     "@mui/material": "^5.16.5",
     "@mui/styled-engine": "^5.15.14",
     "bootstrap": "^5.3.3",
